--- a/FPPP_dataFrame.ipynb
+++ b/FPPP_dataFrame.ipynb
@@ -16,65 +16,43 @@
     "import calendar\n",
     "%matplotlib inline\n",
     "\n",
-    "csv_path13_1 = \"dataset\\\\일자별 위탁판매현황(2013년1월).csv\"\n",
-    "csv_path13_2 = \"dataset\\\\일자별 위탁판매현황(2013년2월).csv\"\n",
-    "csv_path13_3 = \"dataset\\\\일자별 위탁판매현황(2013년3월).csv\"\n",
-    "csv_path13_4 = \"dataset\\\\일자별 위탁판매현황(2013년4월).csv\"\n",
-    "csv_path13_5 = \"dataset\\\\일자별 위탁판매현황(2013년5월).csv\"\n",
-    "csv_path13_6 = \"dataset\\\\일자별 위탁판매현황(2013년6월).csv\"\n",
-    "csv_path13_7 = \"dataset\\\\일자별 위탁판매현황(2013년7월).csv\"\n",
-    "csv_path13_8 = \"dataset\\\\일자별 위탁판매현황(2013년8월).csv\"\n",
-    "csv_path13_9 = \"dataset\\\\일자별 위탁판매현황(2013년9월).csv\"\n",
-    "csv_path13_10= \"dataset\\\\일자별 위탁판매현황(2013년10월).csv\"\n",
-    "csv_path13_11= \"dataset\\\\일자별 위탁판매현황(2013년11월).csv\"\n",
-    "csv_path13_12= \"dataset\\\\일자별 위탁판매현황(2013년12월).csv\"\n",
+    "#13년도\n",
+    "csv_path13 = [0]*12\n",
+    "read13 = [0]*12\n",
+    "df13 = [0]*12\n",
+    "temp=\"\"\n",
     "\n",
+    "#13년도\n",
+    "for i in range(2):\n",
+    "    #csv경로\n",
+    "    csv_path13[i] = \"dataset\\\\일자별 위탁판매현황(2013년\"+str(i+1)+\"월).csv\"\n",
+    "    #csv읽어옴\n",
+    "    read13[i] = pd.read_csv(csv_path13[i], engine='python',error_bad_lines=False, warn_bad_lines=False)\n",
+    "    #데이터프레임 생성\n",
+    "    df13[i] = DataFrame(read13[i])\n",
+    "    if i==1:\n",
+    "        temp = pd.concat([df13[i-1],df13[i]])\n",
+    "    elif i==0:\n",
+    "        df = df13[0]\n",
+    "    elif i==11:\n",
+    "        df = pd.concat([temp, df13[i]])\n",
+    "    elif i>1:\n",
+    "        temp = pd.concat([temp,df13[i]])\n",
     "\n",
-    "#csv 읽어옴\n",
-    "read13_1 = pd.read_csv(csv_path13_1, engine='python',error_bad_lines=False, warn_bad_lines=False)\n",
-    "read13_2 = pd.read_csv(csv_path13_2, engine='python',error_bad_lines=False, warn_bad_lines=False)\n",
-    "read13_3 = pd.read_csv(csv_path13_3, engine='python',error_bad_lines=False, warn_bad_lines=False)\n",
-    "read13_4 = pd.read_csv(csv_path13_4, engine='python',error_bad_lines=False, warn_bad_lines=False)\n",
-    "read13_5 = pd.read_csv(csv_path13_5, engine='python',error_bad_lines=False, warn_bad_lines=False)\n",
-    "read13_6 = pd.read_csv(csv_path13_6, engine='python',error_bad_lines=False, warn_bad_lines=False)\n",
-    "read13_7 = pd.read_csv(csv_path13_7, engine='python',error_bad_lines=False, warn_bad_lines=False)\n",
-    "read13_8 = pd.read_csv(csv_path13_8, engine='python',error_bad_lines=False, warn_bad_lines=False)\n",
-    "read13_9 = pd.read_csv(csv_path13_9, engine='python',error_bad_lines=False, warn_bad_lines=False)\n",
-    "read13_10 = pd.read_csv(csv_path13_10, engine='python',error_bad_lines=False, warn_bad_lines=False)\n",
-    "read13_11 = pd.read_csv(csv_path13_11, engine='python',error_bad_lines=False, warn_bad_lines=False)\n",
-    "read13_12 = pd.read_csv(csv_path13_12, engine='python',error_bad_lines=False, warn_bad_lines=False)\n",
-    "\n",
-    "#데이터프레임 생성\n",
-    "df13_1 = DataFrame(read13_1)\n",
-    "df13_2 = DataFrame(read13_2)\n",
-    "df13_3 = DataFrame(read13_3)\n",
-    "df13_4 = DataFrame(read13_4)\n",
-    "df13_5 = DataFrame(read13_5)\n",
-    "df13_6 = DataFrame(read13_6)\n",
-    "df13_7 = DataFrame(read13_7)\n",
-    "df13_8 = DataFrame(read13_8)\n",
-    "df13_9 = DataFrame(read13_9)\n",
-    "df13_10= DataFrame(read13_10)\n",
-    "df13_11= DataFrame(read13_11)\n",
-    "df13_12= DataFrame(read13_12)\n",
-    "\n",
-    "#데이터프레임 연결한다.\n",
-    "temp = pd.concat([df13_1,df13_2]) \n",
-    "temp = pd.concat([temp, df13_3])\n",
-    "temp = pd.concat([temp, df13_4])\n",
-    "temp = pd.concat([temp, df13_5])\n",
-    "temp = pd.concat([temp, df13_6])\n",
-    "temp = pd.concat([temp, df13_7])\n",
-    "temp = pd.concat([temp, df13_8])\n",
-    "temp = pd.concat([temp, df13_9])\n",
-    "temp = pd.concat([temp, df13_10])\n",
-    "temp = pd.concat([temp, df13_11])\n",
-    "df = pd.concat([temp, df13_12])\n",
-    "\n",
-    "#어종상태명이 '(활)' 인 row의 위판일, 코드명, 상태명, 단가 열을 가져온다.\n",
-    "df = df.loc[df.어종상태명==\"(활)\",[\"위판일자\",\"수산물표준코드명\",\"어종상태명\",\"위판단가\"]]\n",
+    "#어종상태명이 '(활)' 인 row의 해당 속성 열을 가져온다.\n",
+    "df = df.loc[df.어종상태명==\"(활)\",[\"위판일자\",\"수산물표준코드명\",\"산지조합명\",\"위판중량\", \"위판금액\"]]\n",
     "#코드명이 '가자미류'인 row만 선택한다.\n",
-    "df = df.loc[df.수산물표준코드명==\"가자미류\",[\"위판일자\",\"수산물표준코드명\",\"어종상태명\",\"위판단가\"]]\n",
+    "df = df.loc[df.수산물표준코드명==\"가자미류\",[\"위판일자\",\"산지조합명\",\"위판중량\", \"위판금액\"]]\n",
+    "#\"kg평균\"의 비어있는 column을 추가한다.(여기에 (위판중량/위판금액)를 저장한다.)\n",
+    "df[\"kg평균\"] = \"\"\n",
+    "for i in range(len(df)):\n",
+    "    kg = df.loc[i,[\"위판중량\"]]\n",
+    "    money = df.loc[i,[\"위판금액\"]]\n",
+    "    print(kg)\n",
+    "    print(money)\n",
+    "print(df)\n",
+    "\n",
+    "'''\n",
     "#그룹별 평균을 구한다. 여기서는 위판일자 별 위판단가 평균\n",
     "df_mean = df.groupby(['위판일자','수산물표준코드명'], as_index=False).mean() \n",
     "\n",
@@ -83,7 +61,7 @@
     "colors = prop_cycle.by_key()['color']\n",
     "\n",
     "#한글 폰트 지정\n",
-    "plt.rcParams[\"font.family\"] = 'NanumBarunGothic'\n",
+    "plt.rcParams[\"font.family\"] = 'NanumSquareRound'\n",
     "plt.rcParams[\"font.size\"] = 10\n",
     "\n",
     "#x,y좌표 라벨, 표 크기 지정\n",
@@ -109,10 +87,7 @@
     "plt.title(\"가자미류 13년도 일 평균 가격\")\n",
     "plt.plot(x,y,linestyle='-',c=\"m\" ,label=\"value\")\n",
     "plt.show()\n",
-    "\n",
-    "\n",
-    "\n",
-    "\n"
+    "'''"
    ]
   },
   {
@@ -139,7 +114,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.5"
+   "version": "3.7.0b4"
   }
  },
  "nbformat": 4,
