수산물가격예측
이상치 제거까

--- a/FPPP_dataFrame.ipynb
+++ b/FPPP_dataFrame.ipynb
@@ -3,8 +3,40 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
-   "outputs": [],
+   "metadata": {
+    "scrolled": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1번째 파일 읽는중..\n",
+      "경과 시간 : 12.4818115234375 초 \n",
+      "2번째 파일 읽는중..\n",
+      "경과 시간 : 24.49539828300476 초 \n",
+      "3번째 파일 읽는중..\n",
+      "경과 시간 : 38.137845516204834 초 \n",
+      "4번째 파일 읽는중..\n",
+      "경과 시간 : 49.86920976638794 초 \n",
+      "5번째 파일 읽는중..\n",
+      "경과 시간 : 58.703941106796265 초 \n",
+      "6번째 파일 읽는중..\n",
+      "경과 시간 : 70.06776976585388 초 \n",
+      "7번째 파일 읽는중..\n",
+      "경과 시간 : 84.09709644317627 초 \n",
+      "8번째 파일 읽는중..\n",
+      "경과 시간 : 101.88411068916321 초 \n",
+      "9번째 파일 읽는중..\n",
+      "경과 시간 : 118.00308012962341 초 \n",
+      "10번째 파일 읽는중..\n",
+      "경과 시간 : 131.49667358398438 초 \n",
+      "11번째 파일 읽는중..\n",
+      "경과 시간 : 149.6725504398346 초 \n",
+      "12번째 파일 읽는중..\n"
+     ]
+    }
+   ],
    "source": [
     "from pandas import Series,DataFrame\n",
     "import matplotlib.pyplot as plt\n",
@@ -18,49 +50,153 @@
     "import multiprocessing\n",
     "import time\n",
     "from glob import glob\n",
+    "import numpy as np\n",
+    "\n",
+    "import seaborn as sns\n",
+    "#데이터시각화 도구(설치필요)\n",
+    "sns.set_style(\"whitegrid\")\n",
+    "sns.set_context(\"paper\")\n",
+    "#설정\n",
     "\n",
     "\n",
     "%matplotlib inline\n",
+    "count=0\n",
+    "\n",
     "\n",
     "########################csv파일 읽어오고 dataframe생성#####################\n",
+    "\n",
     "start_time = time.time()  # 시간측정시작\n",
     "df = pd.DataFrame()       # 비어있는 dataframe생성\n",
     "folder = \"./dataset/\"     # dataset 폴더의 경로\n",
     "file_list = glob(folder + '*.csv')  #dataset 폴더에 들어있는 csv 확장자 리스트를 전부 가져온다.\n",
     "for file in file_list:             #csv파일들을 하나의 dataframe으로 연결\n",
+    "    count+=1\n",
+    "    print(\"{0}번째 파일 읽는중..\".format(count))\n",
     "    f = pd.read_csv(file, engine='python',error_bad_lines=False, warn_bad_lines=False)\n",
-    "    df = pd.concat([df,f])\n",
+    "    df = pd.concat([df,f]) \n",
+    "    print(\"경과 시간 : %s 초 \" %((time.time() - start_time)))\n",
     "print(\"데이터프레임 연결까지 경과 시간 : %s 분 \" %((time.time() - start_time)/60))\n",
-    "###########################################################################\n",
     "\n",
     "########어종 = '가자미류'에 해당하는 row를 가져와 kg당가격을 구한다########\n",
+    "\n",
     "#어종상태명이 '(활)' 인 row의 해당 속성 열을 가져온다.\n",
     "df = df.loc[df.어종상태명==\"(활)\",[\"위판일자\",\"수산물표준코드명\",\"산지조합명\",\"위판중량\", \"위판금액\"]]\n",
     "#코드명이 '가자미류'인 row만 선택한다.\n",
     "df = df.loc[df.수산물표준코드명==\"가자미류\",[\"위판일자\",\"산지조합명\",\"위판중량\", \"위판금액\"]]\n",
-    "#0 value를 포함한 행을 삭제한다.\n",
+    "\n",
+    "\n",
+    "\n",
     "df = df[~(df == 0).any(axis=1)]\n",
-    "#'kg당가격' calumun\n",
+    "#열에 있는 데이터중에 0인 데이터를 지운다 . axis = 1 은 그 해당 행을 지우고\n",
+    "#                                           axis = 0 은 그 해당 열을 지운다.\n",
+    "#0 value를 포함한 행을 삭제한다\n",
+    "#데이터의 갯수가 충분히 많으므로 0인 데이터를 뺴줘도 무관하다.\n",
+    "#데이터의 갯수가 충분하지 않다면 행삭제를 고려할 것\n",
+    "\n",
+    "\n",
     "def sublst(row):\n",
-    "    return int(round((row['위판금액']/row['위판중량'])))\n",
+    "    kg = int(round((row['위판금액']/row['위판중량'])))\n",
+    "\n",
+    "    return kg\n",
     "#\"kg당가격\"이라는 비어있는 column을 추가하고 위판금액을 위판중량으로 나눈 값을 저장\n",
+    "\n",
     "df['kg당가격'] = df.apply(sublst,axis=1)\n",
+    "\n",
+    "#일자별 위판별 KG당 가격으로 데이터 전처리\n",
+    "#'kg당가격' calumun\n",
+    "#해양수산데이터에서 KG당 가격을 제공하지만 해당 데이터가 확인중 불확실하다. \n",
+    "#따라서 전체 위판금액에서 위판중량을 나눠서 KG당 가격을 다시 구한다.\n",
+    "\n",
+    "#'kg당가격으로 이상치 탐지를 작업합니다.'\n",
+    "\n",
+    "\n",
+    "\n",
+    "#####################이상치제거 및 데이터 가공 부분#######################\n",
+    "#한글 폰트 지정\n",
+    "plt.rcParams[\"font.family\"] = 'NanumBarunGothic'\n",
+    "plt.rcParams[\"font.size\"] = 10\n",
+    "\n",
+    "\n",
+    "kp = 'kg당가격'\n",
+    "\n",
+    "'''\n",
+    "plt.figure(figsize=(10,8))\n",
+    "plt.subplot(211)\n",
+    "plt.xlim(df[kp].min(), df[kp].max()*1.1)\n",
+    "ax = df[kp].plot(kind='kde')\n",
+    "\n",
+    "plt.subplot(212)\n",
+    "plt.xlim(df[kp].min(), df[kp].max()*1.1)\n",
+    "sns.boxplot(x=df[kp])\n",
+    "'''\n",
     "############################################################################\n",
     "\n",
+    "print(df)\n",
+    "\n",
+    "\n",
+    "df.loc[df.kg당가격 == 0, 'kg당가격'] = np.nan\n",
+    "#0의 값이 들어있는 데이터를 Nan으로 치환(0값은 로그변환시 에러 발생한다.)\n",
+    "\n",
+    "df.dropna(inplace=True)\n",
+    "#dropna함수를 이용해 결측값이 포함된 행을 전체제거해준다.\n",
+    "\n",
+    "df['Log_'+ kp] = np.log(df[kp])\n",
+    "#'Log_kg당가격'행'에 로그변환\n",
+    "\n",
+    "q75, q25 = np.percentile(df.Log_kg당가격.dropna(), [75 ,25])\n",
+    "iqr = q75 - q25\n",
+    "\n",
+    "min = q25 - (iqr*1.5)\n",
+    "max = q75 + (iqr*1.5)\n",
+    "#1.5를 곱해줘서 그 밖의 값은 이상치로 판단한다.\n",
+    "\n",
+    "\n",
+    "print(iqr)\n",
+    "print(q75)\n",
+    "print(q25)\n",
+    "#percentile함수로 백분위수 25~75에 해당하는 값을 구해준다.\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "kp = 'Log_kg당가격'\n",
+    "\n",
+    "'''\n",
+    "plt.figure(figsize=(10,8))\n",
+    "plt.subplot(211)\n",
+    "plt.xlim(df[kp].min(), df[kp].max()*1.1)\n",
+    "ax = df[kp].plot(kind='kde')\n",
+    "\n",
+    "plt.subplot(212)\n",
+    "plt.xlim(df[kp].min(), df[kp].max()*1.1)\n",
+    "sns.boxplot(x=df[kp])\n",
+    "'''\n",
+    "\n",
+    "\n",
+    "df['Outlier'] = 1\n",
+    "\n",
+    "df.loc[df[kp] < min, 'Outlier'] = 0\n",
+    "df.loc[df[kp] > max, 'Outlier'] = 0\n",
+    "\n",
+    "df.loc[df.Outlier == 0, 'Outlier'] = np.nan\n",
+    "#0의 값이 들어있는 데이터를 Nan으로 치환(0값은 로그변환시 에러 발생한다.)\n",
+    "\n",
+    "df.dropna(inplace=True)\n",
+    "#dropna함수를 이용해 결측값이 포함된 행을 전체제거해준다.\n",
+    "\n",
+    "del df[\"Outlier\"]\n",
+    "#이상치판별 열 제거\n",
+    "\n",
     "###################위판일자별 kg당가격의 평균을 구한다######################\n",
+    "\n",
     "#그룹별 평균을 구한다. 여기서는 위판일자별 kg당가격 평균\n",
     "df_mean = df.groupby(['위판일자'], as_index=False).mean() \n",
-    "print(df_mean)\n",
-    "############################################################################\n",
+    "print(df_mean.to_string())\n",
     "\n",
     "###############################그래프 생성##################################\n",
     "#그래프 월별 색깔 지정 (10가지 색상)\n",
     "prop_cycle = plt.rcParams['axes.prop_cycle']\n",
     "colors = prop_cycle.by_key()['color']\n",
-    "\n",
-    "#한글 폰트 지정\n",
-    "plt.rcParams[\"font.family\"] = 'NanumSquareRound'\n",
-    "plt.rcParams[\"font.size\"] = 10\n",
     "\n",
     "#x,y좌표 라벨, 표 크기 지정\n",
     "plt.figure(figsize=(24,10))\n",
@@ -74,7 +210,7 @@
     "    x.append(times)\n",
     "for line in df_mean.kg당가격:\n",
     "    y.append(line)\n",
-    "\n",
+    "'''\n",
     "#강조 구간\n",
     "for i in range(1,13):\n",
     "    span_start = dt.datetime(2013, i, 1)\n",
@@ -82,10 +218,12 @@
     "    span_end = dt.datetime(2013, i, end_day)\n",
     "    plt.axvspan(span_start, span_end, facecolor=colors[i%10], alpha=0.5)\n",
     "\n",
+    "'''    \n",
+    "    \n",
     "plt.title(\"가자미류 13년도 일 평균 가격(kg당)\")\n",
     "plt.plot(x,y,linestyle='-',c=\"m\" ,label=\"value\")\n",
     "plt.show()\n",
-    "print(\"총 경과 시간 : %s 분 \" %((time.time() - start_time)/60))"
+    "print(\"총 경과 시간 : %s 분 \" %((time.time() - start_time)/60))\n"
    ]
   },
   {
@@ -112,7 +250,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.0b4"
+   "version": "3.6.5"
   }
  },
  "nbformat": 4,
